<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/cont_name"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_outline"
            android:focusable="false"
            android:hint="@string/name"
            android:maxLines="1"
            android:minHeight="@dimen/spacing_xmlarge"
            android:text="" />

        <EditText
            android:id="@+id/cont_email"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:focusable="false"
            android:hint="@string/email_address"
            android:maxLines="1"
            android:minHeight="@dimen/spacing_xmlarge" />

        <EditText
            android:id="@+id/cont_phone"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:focusable="false"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:minHeight="@dimen/spacing_xmlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/shipping_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ship_name"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/ship_last_name"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ship_state"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="@string/state"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/ship_city"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="" />

        </LinearLayout>


        <EditText
            android:id="@+id/ship_address"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/full_address"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:minHeight="@dimen/spacing_xmlarge"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/extra_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/extra_message"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:gravity="top"
            android:hint="@string/enter_your_message_here"
            android:inputType="text"
            android:lines="5"
            android:maxLines="4"
            android:minHeight="@dimen/spacing_xmlarge"
            android:text="" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>