<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PhoneVerificationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/enter_code_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:padding="@dimen/spacing_large"
                    android:text="@string/enter_phone_verification_code"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />


                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="@string/enter_code_here"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/grey_60" />

                        <EditText
                            android:id="@+id/code_field"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/edit_text_round_bg_white"
                            android:gravity="center"
                            android:inputType="number"
                            android:minHeight="@dimen/spacing_xmlarge"
                            android:paddingLeft="@dimen/spacing_middle"
                            android:paddingRight="@dimen/spacing_middle" />


                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/bt_submit_code"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rect_primary"
                    android:text="@string/v_rifier_le_code"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/bt_request_another_code"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginRight="-4dp"
                    android:text="@string/request_another_code"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/enter_phone_number_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:padding="@dimen/spacing_large"
                    android:text="@string/you_must_first_verify_your_phone_number_before_you_create_a_goneva_s_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="@string/country"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_60" />

                        <EditText
                            android:id="@+id/country"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/edit_text_round_bg_white"
                            android:clickable="true"
                            android:drawableEnd="@drawable/ic_expand_arrow"

                            android:enabled="true"
                            android:focusable="false"
                            android:maxLines="1"
                            android:minHeight="@dimen/spacing_xmlarge"
                            android:paddingLeft="@dimen/spacing_middle"
                            android:paddingRight="@dimen/spacing_middle"
                            android:text="" />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="@string/phone_number"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_60" />

                        <EditText
                            android:id="@+id/phone_number"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/edit_text_round_bg_white"
                            android:inputType="phone"
                            android:minHeight="@dimen/spacing_xmlarge"
                            android:paddingLeft="@dimen/spacing_middle"
                            android:paddingRight="@dimen/spacing_middle"
                            android:text="" />


                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/bt_submit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rect_primary"
                    android:text="Vérifier le numéro de téléphone"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>