<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_middle">

        <ImageView
            android:id="@+id/cart_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/doodle_1" />

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/coup_hoodie_jacket"
                    android:maxLines="5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/cart_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green_m"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_40" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/_89_00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/cart_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_add" />

                <TextView
                    android:id="@+id/cart_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90"
                    app:fontFamily="sans-serif-medium" />

                <ImageButton
                    android:id="@+id/cart_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_subtract" />

                <ImageButton
                    android:id="@+id/cart_parent_view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@android:color/holo_red_dark"
                    app:srcCompat="@drawable/ic_remove" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_10" />
</LinearLayout>